opam-version: "2.0"
name: "Int63"
version: "1.0"
maintainer: "Int63 team"
homepage: "https://github.com/appliedfm/coq-vst-int63"
dev-repo: "git+https://github.com/appliedfm/coq-vst-int63.git"
bug-reports: "https://github.com/appliedfm/coq-vst-int63/issues"
license: "https://github.com/appliedfm/coq-vst-int63/blob/main/LICENSE"
authors: ["Int63 team"]
build: [
    [make "deepclean"]
    [make "BITSIZE=32" "J=%{jobs}%"]
]
install: [
    make "BITSIZE=32" "install"
]
depends: [
    "coq" {>= "8.13.2"}
    "coq-compcert" {>= "3.9"}
    "coq-vst" {>= "2.8"}
]
synopsis: "Formally verified 63-bit integer arithmetic, implemented in C and proven in Coq"
description: """Int63

Formally verified 63-bit integer arithmetic, implemented in C and proven in Coq. Powered by VST.
"""